<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtNama"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtGender"
        app:layout_constraintTop_toBottomOf="@+id/txtNama"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/hobi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtHobi"
        app:layout_constraintTop_toBottomOf="@+id/txtGender"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:textSize="20sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/editNama"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nama_lengkap"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtNama"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/editNama"
        app:layout_constraintStart_toEndOf="@+id/txtGender"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:orientation="horizontal"
        android:id="@+id/radioGroup">
    <RadioButton
        android:text="@string/pria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rbPria"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textStyle="bold"/>
        <RadioButton
            android:text="@string/wanita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rbWanita"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </RadioGroup>
    <CheckBox
        android:text="@string/coding"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbCoding"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/reading"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbReading"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cbCoding"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <CheckBox
        android:text="@string/traveling"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/cbTraveling"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cbReading"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtHobi"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_delete"
        android:id="@+id/imgButtonCancel"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbTraveling"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:contentDescription="@string/todo" />
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_input_add"
        android:id="@+id/imgButtonAdd"
        app:layout_constraintEnd_toStartOf="@+id/imgButtonCancel"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/cbTraveling"
        android:contentDescription="@string/todo" />


</androidx.constraintlayout.widget.ConstraintLayout>